provide a 'Content-Range' header for paginated entities
